// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders style when isFocused=false, isDragAccept=false, isDragReject=false 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#fafafa",
  "borderColor": "#e0e0e0",
  "borderRadius": 2,
  "borderStyle": "dashed",
  "borderWidth": 2,
  "cursor": "pointer",
  "display": "flex",
  "flex": 1,
  "flexDirection": "column",
  "outline": "none",
  "padding": "5rem 1rem",
  "transition": "border .24s ease-in-out",
}
`;

exports[`renders style when isFocused=false, isDragAccept=false, isDragReject=true 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#fafafa",
  "borderColor": "#f57f17",
  "borderRadius": 2,
  "borderStyle": "dashed",
  "borderWidth": 2,
  "cursor": "pointer",
  "display": "flex",
  "flex": 1,
  "flexDirection": "column",
  "outline": "none",
  "padding": "5rem 1rem",
  "transition": "border .24s ease-in-out",
}
`;

exports[`renders style when isFocused=false, isDragAccept=true, isDragReject=false 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#fafafa",
  "borderColor": "#b71c1c",
  "borderRadius": 2,
  "borderStyle": "dashed",
  "borderWidth": 2,
  "cursor": "pointer",
  "display": "flex",
  "flex": 1,
  "flexDirection": "column",
  "outline": "none",
  "padding": "5rem 1rem",
  "transition": "border .24s ease-in-out",
}
`;

exports[`renders style when isFocused=true, isDragAccept=false, isDragReject=false 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#fafafa",
  "borderColor": "#b71c1c",
  "borderRadius": 2,
  "borderStyle": "dashed",
  "borderWidth": 2,
  "cursor": "pointer",
  "display": "flex",
  "flex": 1,
  "flexDirection": "column",
  "outline": "none",
  "padding": "5rem 1rem",
  "transition": "border .24s ease-in-out",
}
`;
